# max

./: .gitignore  README.md  max.code-workspace  pyproject.toml
max/: __init__.py  __main__.py  _theme.py  color_index.py  console.py  examples.py  gradient.py  log.py  named_color.py  new_color_index.py  new_rule.py  progress.py  rule.py  theme.py
static/: color_index.py  gradient2.py  gradient_framed.py  max_theme.yaml  maxtheme.toml  named_color.py  old_gradient.py  progress.py  scratch.py
