[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "snoop>=0.4.3",
    "birdseye>=0.9.4",
    "pylint>=2.16.2",
    "ipywidgets>=8.0.4",
    "jupyter>=1.0.0",
    "ipython>=8.11.0",
    "pyaml>=21.10.1",
    "ujson>=5.7.0",
    "toml>=0.10.2",
]

[project]
name = "max"
version = "0.1.0"
description = "A library that automates some of the tricky parts of rich."
authors = [{ name = "maxludden", email = "dev@maxludden.com" }]
dependencies = [
    "rich>=13.3.1",
    "colorama>=0.4.6",
    "loguru>=0.6.0",
    "lorem-text>=2.1",
    "svgwrite>=1.4.3",
    "notebook>=6.5.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
